fix/원준: Move() method update, (백도처리X, todo항목 회의 필요)